--- a/app/templates/accessibility.html
+++ b/app/templates/accessibility.html
@@ -1,14 +1,14 @@
 <div class="accessibility-tool">
     <div class="fixed">
         <div class="same">
-            <div class="arrow">⌃</div>
+            <div class="arrow">▾</div>
             <h1 class="toolbar-title"> Accessibility </h1>
             <div class="shortcut">Ctrl/Cmd + Shift + A</div>
         </div>
         <div class="toolbar-read">
             <div class="words">
                 <h2>Read Aloud</h2>
-                <div class="shortcut">Ctrl/Cmd + Alt + P</div>
+                <div class="shortcut">Ctrl/Cmd + Shift + L</div>
                 <h3>Restart</h3>
                 <div class="shortcut">Ctrl/Cmd + Alt + R</div>
             </div> 
@@ -42,6 +42,8 @@
                     <line x1="35" y1="13" x2="45" y2="13" stroke="black" stroke-width="2"/>
                     <line x1="9" y1="13" x2="19" y2="13" stroke="black" stroke-width="2"/>
                     <line x1="26.5" y1="2.10751e-08" x2="26.5" y2="26" stroke="black"/>
+                    <rect id="minus" width="26.5" height="26" fill="white" fill-opacity="0"/>
+                    <rect id="plus" width="26.5" height="26" x="26.5" y="0" fill="white" fill-opacity="0"/>
                 </svg>
             </div>
         </div>
