--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -2,7 +2,7 @@
 
 <div id='navbar'>
   <div class="logo"><img src='/images/navbarlogo.svg'></div>
-  <ul>
+  <ul class="web">
     <li id="home"><a href="/index.html">HOME</a></li>
     <li id="project">
       <a>PROJECT</a>
@@ -41,4 +41,5 @@
     </li>
     <li><a href="/Safety.html">SAFETY</a></li>
   </ul>
+  <div class="hamburger1 mobileIcon"><img src='/images/hamburger1.svg'></div>
 </div>
