more mobile friendly work and promotion/pres videos

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -2,9 +2,9 @@
 
 <div id='navbar'>
   <div class="logo"><img src='/images/navbarlogo.svg'></div>
-  <ul class="web">
-    <li id="home"><a href="/index.html">HOME</a></li>
-    <li id="project">
+  <ul>
+    <li id="home" class="web"><a href="/index.html">HOME</a></li>
+    <li id="project" class="web">
       <a>PROJECT</a>
       <ul>
         <li><a href="/Description.html">Description</a></li>
@@ -15,7 +15,7 @@
         <li><a href="/Proof_Of_Concept.html">Proof of Concept</a></li>
       </ul>
     </li>
-    <li id="parts">
+    <li id="parts" class="web">
       <a>PARTS</a>
       <ul>
         <li><a href="/Parts.html">Parts</a></li>
@@ -23,7 +23,7 @@
         <li><a href="/Improvement.html">Improvement</a></li>
       </ul>
     </li>
-    <li id="hp">
+    <li id="hp" class="web">
       <a>HUMAN PRACTICES</a>
       <ul>
         <li><a href="/Human_Practices.html">Human Practices</a></li>
@@ -31,7 +31,7 @@
         <li><a href="/Inclusion.html">Inclusion</a></li>
       </ul>
     </li>
-    <li id="team">
+    <li id="team" class="web">
       <a>TEAM</a>
       <ul>
         <li><a href="/Team.html">Members</a></li>
@@ -39,7 +39,7 @@
         <li><a href="/Collaborations.html">Collaborations</a></li>
       </ul>
     </li>
-    <li><a href="/Safety.html">SAFETY</a></li>
+    <li><a href="/Safety.html" class="web">SAFETY</a></li>
+    <div class="hamburger1 mobileIcon"><img src='/images/hamburger1.svg'></div>
   </ul>
-  <div class="hamburger1 mobileIcon"><img src='/images/hamburger1.svg'></div>
 </div>
