--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -700,6 +700,9 @@ header {
       #navbar .mobileIcon {
         display: block !important;
       }
+      header #navbar > ul {
+        justify-content: flex-end;
+      }
     }
 
     #navbar .mobileIcon {
@@ -707,10 +710,15 @@ header {
     }
     #navbar .hamburger1 {
       float: right;
-      padding-top: 13px !important;
+      padding-top: 8px;
+      padding-right: 8px;
+    }
+    #navbar .hamburger1 img:hover {
+      background-color: #FB9E36; 
     }
     #navbar .hamburger1 img {
-      padding-right: 10px;
+      padding: 10px;
+      border-radius: 5px;
     }
       header #navbar ul li {
         float: right;
@@ -1132,6 +1140,24 @@ main {
   }
 }
 
+.buildingsMobile  {
+  display: none;
+}
+
+.buildingsMobile img {
+  width: 90% !important;
+  padding-left: 100px;
+}
+
+@media only screen and (max-width: 900px) { 
+  .headerCol2 img {
+    display: none;
+  }
+  .buildingsMobile  {
+    display: block;
+  }
+}
+
 .info h1 {
   font-weight: 700 !important;
   font-size: 24px !important;
@@ -1481,6 +1507,9 @@ li::before {
   .headerCol {
     padding-left: 30px !important;
   }
+  .buildingsMobile img {
+    padding-left: 30px !important;
+  }
   .contentcol {
     padding: 0px 30px 0px 30px;
   }
@@ -1489,10 +1518,6 @@ li::before {
     min-width: 300px !important;
   }
 
-
-  .headerCol2 img {
-    display: none;
-  }
 }
 
 @media only screen and (max-width: 580px) {
@@ -1739,4 +1764,28 @@ ul.noBullet li {
   cursor: pointer !important;
 }
 
+video {
+  padding: 30px 100px;
+}
 
+video:focus {
+  outline:none;
+}
+
+.video h2 {
+  font-weight: 700 !important;
+  font-size: 20px !important;
+  color: #003650 !important;
+  margin-left: 0px !important;
+  padding-left: 100px;
+  line-height: 150% !important;
+}
+
+@media only screen and (max-width: 800px) { 
+  video {
+    padding: 30px;
+  }
+  .video h2 {
+    padding-left: 30px;
+  }
+}
