--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -40,6 +40,6 @@
       </ul>
     </li>
     <li><a href="/Safety.html" class="web">SAFETY</a></li>
-    <div class="hamburger1 mobileIcon"><img src='/images/hamburger1.svg'></div>
+    <div id="mobileIcon" class="hamburger1 mobileIcon"><img src='/images/hamburger1.svg'></div>
   </ul>
 </div>
